crates/edm/src/tui/view/snapshots/edm__tui__view__tests__empty_pins.snap
---
source: crates/edm/src/tui/view/tests.rs
expression: "frame(&state, 100, 20)"
---
 edm  1:Search  2:Results  3:Detail  4:Pins  5:Sell  L:Log
┌ Pins  Enter opens  d deletes  R refreshes  o re-opens its search ────────────────────────────────┐
│nothing is pinned yet                                                                             │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 requests 0 / 2,000  no journal  F1 help  Ctrl-L log  Ctrl-C quit
